chatterbox overflow issue fixed

--- a/serverside/webapp/WEB-INF/base/eminstitute/community/default/theme/css/eminstitute.css
+++ b/serverside/webapp/WEB-INF/base/eminstitute/community/default/theme/css/eminstitute.css
@@ -3,7 +3,7 @@ body {
   height: 100%;
 }
 #application {
-	height: auto;
+  height: auto;
   min-height: 100%;
 }
 
@@ -18,24 +18,28 @@ body {
   min-height: 480px;
 }
 .mainsection {
-	width: 100%;
-	display: flex;
+  width: 100%;
+  display: flex;
 }
 @media (min-width: 992px) {
-	.container-fluid {
-		margin: 0 1%;		
-	}
+  .container-fluid {
+    margin: 0 1%;
+  }
 }
 
 @media (min-width: 1600px) {
-	.container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-	    max-width: 1460px;
-	}
-	.container-fluid {
-		margin: 0 2%;		
-	}
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl,
+  .container-xxl {
+    max-width: 1460px;
+  }
+  .container-fluid {
+    margin: 0 2%;
+  }
 }
-
 
 p {
   line-height: 1.75;
@@ -103,9 +107,8 @@ a.primary:hover .fa-solid {
 
 .bg-white,
 .bg-light {
-	color:#000;
+  color: #000;
 }
-
 
 .table-hover a:hover {
   text-decoration: none;
@@ -320,8 +323,8 @@ a.primary:hover .fa-solid {
   background-color: #e0e0e0 !important;
   font-size: 1.1rem;
   line-height: 2;
-  border-radius: 0!important;
-  border: 0 none!important;
+  border-radius: 0 !important;
+  border: 0 none !important;
 }
 
 .oi-sidebar-toggler:hover {
@@ -448,7 +451,7 @@ a.primary:hover .fa-solid {
 
 .sidebar-box {
   background-color: #fff;
-  font-size: .95rem;
+  font-size: 0.95rem;
   z-index: 20;
 }
 
@@ -508,7 +511,7 @@ a.primary:hover .fa-solid {
 }
 
 usersidebartopmessages .messageselection:nth-of-type(odd) {
-	background-color: #ddd;
+  background-color: #ddd;
 }
 .card-collections-thumb {
   height: 28px;
@@ -518,9 +521,9 @@ usersidebartopmessages .messageselection:nth-of-type(odd) {
   background-repeat: no-repeat;
 }
 .messagetimestamp {
-	font-size:.7em;
-	line-height: 1;
-	font-style:italic;
+  font-size: 0.7em;
+  line-height: 1;
+  font-style: italic;
 }
 
 .oauthproviderbtn {
@@ -860,7 +863,6 @@ usersidebartopmessages .messageselection:nth-of-type(odd) {
   color: #fff;
 }
 
-
 .emwidget {
   border-radius: 12px;
   height: 100%;
@@ -917,9 +919,8 @@ usersidebartopmessages .messageselection:nth-of-type(odd) {
   padding: 10px 15px;
 }
 
-
 .emwidget-chatterbox {
-	height: calc(100vh - 250px);
+  height: calc(100vh - 324px);
 }
 
 .chatterbox {
@@ -943,20 +944,20 @@ usersidebartopmessages .messageselection:nth-of-type(odd) {
   position: relative;
 }
 .chatterbox-messages .resultspositions {
-	padding: 6px 15px;
-	background-color: #efefef;
+  padding: 6px 15px;
+  background-color: #efefef;
 }
 .msg-bubble {
-	color:#000;
+  color: #000;
 }
 .msg-bubble .chat-author {
-	font-size: 0.9em;
+  font-size: 0.9em;
 }
 .msg-bubble .chat-author a {
-	color:#666;
+  color: #666;
 }
 .msg-bubble .chat-author a:hover {
-	color:#000;
+  color: #000;
 }
 .msg-bubble .msg-body.me {
   color: #000000;
@@ -965,11 +966,11 @@ usersidebartopmessages .messageselection:nth-of-type(odd) {
   color: #444444;
 }
 .msg-bubble .emoticonmenu {
-	text-align:left;
-	padding: 2px 0px 2px 10px;
+  text-align: left;
+  padding: 2px 0px 2px 10px;
 }
 .msg-bubble .emoticonmenu span {
-	cursor:pointer;
+  cursor: pointer;
 }
 .chatterbox-write .chatterbox-media {
   height: 24px;
@@ -2032,8 +2033,12 @@ a.pick-item:hover .project-item {
   /* W3C */
 }
 
-.languagesadd a { color: #444; }
-.languagesadd a:hover { color: #000; }
+.languagesadd a {
+  color: #444;
+}
+.languagesadd a:hover {
+  color: #000;
+}
 
 .resultpages ul li.current a {
   background: #7b7b7b;
@@ -2098,7 +2103,7 @@ ul.inlinelist li {
   width: 70px;
   border-radius: 35px;
   overflow: hidden;
-  
+
   background-position: center center;
   background-color: #ffffff;
   border: 4px solid #ffffff;
@@ -2113,9 +2118,9 @@ ul.inlinelist li {
 }
 
 .project-cover .project-thumb-link {
-	position: absolute; 
-  	left: 30px;
-  	transform: translateY(35px);
+  position: absolute;
+  left: 30px;
+  transform: translateY(35px);
 }
 .project-selected {
   border: 3px solid #edd400;
@@ -2133,11 +2138,11 @@ ul.inlinelist li {
 .rolelist,
 .goaltask-actions,
 .goaltask-credit {
-	padding: 4px 0;
+  padding: 4px 0;
 }
 .goaltask-credit .btn-xs {
-	padding: 0.2rem 0.4rem;
-	border-radius: 6px;
+  padding: 0.2rem 0.4rem;
+  border-radius: 6px;
 }
 
 .oe-dataedit {
@@ -2187,16 +2192,15 @@ ul.inlinelist li {
 }
 
 label.error {
-	font-size: 0.85em;
+  font-size: 0.85em;
 }
 
-.select2-container .select2-selection--single
-{
-	height: calc(1.5rem + 0.45rem);
+.select2-container .select2-selection--single {
+  height: calc(1.5rem + 0.45rem);
 }
 .listdetailpicker {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 .inlinesearch {
   padding: 20px;
